@@ -335,6 +335,7 @@ Version 1.13.0-dev:
      where the Second Watch picture should be used instead (bug #22537).
    * Fixed mishandling of nested subnamespaces by the [clear_global_variable]
      WML action causing an assertion failure (bug #21093).
+   * Fix bug #22443: Scenario Settings table has inaccurate Start Gold info in certain cases
 
 Version 1.11.11:
  * Add-ons server:
